<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView15"
        style="@style/PresentationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_porcetagens" />


    <TextView
        android:id="@+id/textView17"
        style="@style/PresentationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_porcentagem_explicacao" />

    <TextView
        android:id="@+id/textView18"
        style="@style/PresentationHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_porcentagem_alterar" />

    <LinearLayout
        android:id="@+id/ll_present_porc_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.Design.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:focusable="false"
            android:text="@string/str_porcentagem_normal" />

        <TextView
            android:id="@+id/tv_present_porc_normal"
            style="@style/DefLargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:focusable="false"
            android:text="18:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/accent"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_present_porc_completa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.Design.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:focusable="false"
            android:text="@string/str_porcentagem_feriados" />

        <TextView
            android:id="@+id/tv_present_porc_completa"
            style="@style/DefLargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:focusable="false"
            android:text="18:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/accent"
            android:focusable="false" />

    </LinearLayout>

</LinearLayout>