<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/ll_bts_get_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dr_white_bg"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bts_get_termino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/str_das"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="245dp" />

        <TextView
            android:id="@+id/tv_bts_get_inicio_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            tools:text="18:00"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rel_periodo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="2dp"
            android:background="@color/primary"
            android:layout_marginLeft="2dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bts_get_termino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dr_white_bg"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_bts_get_inicio">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/str_ate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/tv_bts_get_termino_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            tools:text="19:00"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rel_minutos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="2dp"
            android:background="@color/primary"
            android:layout_marginLeft="2dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/str_tipo_hora"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_bts_get_termino" />

    <RadioGroup
        android:id="@+id/rdg_bts_get_tipo_hora"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rdb_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shp_retangulo_normal"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/str_normal"
            tools:text="@string/str_normal"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdb_feriado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shp_retangulo_feriado"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/str_feriados"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdb_diff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shp_retangulo_diff"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/str_diferencial"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>